feat: добавил новые коды ошибок для конфликта логина и обновил соответствующую документацию
