# docs/swagger.json
@@ -87,7 +87,13 @@
                         }
                     },
                     "400": {
-                        "description": "Неверный запрос или логин уже занят",
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Логин уже занят",
                         "schema": {
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
@@ -197,6 +203,8 @@
                 "UNAUTHORIZED",
                 "NOT_FOUND",
                 "FORBIDDEN",
+                "CONFLICT",
+                "LOGIN_EXISTS",
                 "INTERNAL_ERROR"
             ],
             "x-enum-varnames": [
@@ -204,6 +212,8 @@
                 "ErrorCodeUnauthorized",
                 "ErrorCodeNotFound",
                 "ErrorCodeForbidden",
+                "ErrorCodeConflict",
+                "ErrorCodeLoginExists",
                 "ErrorCodeInternalError"
             ]
         },
